chore: 배포 설정 추가